--- a/src/css/gamescreen.css
+++ b/src/css/gamescreen.css
@@ -18,3 +18,21 @@
 .title-card {
     padding: 20px 0 20px 0;
 }
+
+.winner-popup-container {
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+}
+.winner-popup {
+    position: relative;
+    margin: 0 auto;
+    background-color: lightgrey;
+    border-radius: 10px;
+    top: 30%;
+    width: 50%;
+    padding: 30px;
+    border: black solid 10px;
+}
