--- a/src/css/controlPanel.css
+++ b/src/css/controlPanel.css
@@ -2,13 +2,14 @@
     max-width: fit-content;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .control-panel {
     background-color: lightgrey;
     padding: 10px;
     width: 1400px;
+    border: outset 10px;
+    border-radius: 20px;
 }
 
 .indicator-canvas-container {
@@ -18,5 +19,12 @@
 .indicator-canvas {
     background-color: darkslategrey;
     border-radius: 100px;
-    border: solid 10px;
+    border: outset 10px;
+}
+
+.shields-indicator {
+    margin: 5px;
+    border-radius: 10px;
+    padding: 5px;
+    border: outset 3px;
 }
