--- a/src/css/gamescreen.css
+++ b/src/css/gamescreen.css
@@ -1,3 +1,9 @@
+.gamescreen {
+    border: #0D98BA outset 10px;
+    border-radius: 10px;
+    margin: 3px;
+}
+
 .layering-canvas {
     position: absolute;
     top: 0;
