--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,9 @@ h1 {
   font-weight: 400;
   font-style: normal;
 }
+
+p, label, button, span, input, select, option {
+  font-family: "Silkscreen", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
